Sea ice to Mm^2 for better plotting.

--- a/monitor.conf
+++ b/monitor.conf
@@ -1,11 +1,12 @@
 
 [main]
 ;the root directory for the monitor subdirectory
-root=/gws/nopw/j04/epoc
+root=/gws/nopw/j04/stabilisation
 ;the reference mapping for comparison timeseries
-references="'HadGEM3-GC31-LL:(control-1950:GC3.1_LL_1950s_control,highres-future:GC3.1_LL_SSP585,highres-future-noghg:GC3.1_LL_SSP585,hist-1950:GC3.1_LL_1950s_hist,hist-1950-noghg:GC3.1_LL_1950s_hist,*:GC3.1_LL_1950s_control);HadGEM3-GC31-HH:(control-1950:GC3.1_HH_1950s_control,highres-future:GC3.1_HH_SSP585,highres-future-noghg:GC3.1_HH_SSP585,*:GC3.1_HH_1950s_control);*:(control-1950:GC3.1_HH_1950s_control,highres-future:GC3.1_HH_SSP585,*:GC3.1_HH_1950s_control)'"
-
-
+#references="'HadGEM3-GC31-LL:(control-1950:GC3.1_LL_1950s_control,highres-future:GC3.1_LL_SSP585,highres-future-noghg:GC3.1_LL_SSP585,hist-1950:GC3.1_LL_1950s_hist,hist-1950-noghg:GC3.1_LL_1950s_hist,*:GC3.1_LL_1950s_control);HadGEM3-GC31-HH:(control-1950:GC3.1_HH_1950s_control,highres-future:GC3.1_HH_SSP585,highres-future-noghg:GC3.1_HH_SSP585,*:GC3.1_HH_1950s_control);*:(control-1950:GC3.1_HH_1950s_control,highres-future:GC3.1_HH_SSP585,*:GC3.1_HH_1950s_control)'"
+references=
+;the sbatch queue options for the plots sbatch 
+plots_queue=-p standard --qos=short --account=epoc --mem=6000
 
 [slack]
 ;url for a slack webhook for error notification
